--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
 
 
 body {
-    height: 100vh;
     box-sizing: border-box;
     background-color: black;
     color: #F6F6F6;
@@ -20,7 +19,7 @@ body {
 }
 
 .apresentacao {
-    margin: 10% 15%;
+    padding: 8% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -77,4 +76,16 @@ body {
     font-family: "Krona One", sans-serif;
     font-weight: 400;
     font-size: 24px;
+}
+.apresentacao__links__botoes:hover{
+        background-color: #272727;   
+}
+.rodape {
+    padding: 23.74px;
+    background-color: rgb(255, 98, 98);
+    color: #000000;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    font-size: 24px;
+    font-weight: 400;
 }
