--- a/styles/style.css
+++ b/styles/style.css
@@ -108,7 +108,7 @@ body {
     background-color: var(--cor-hover);
 }
 .apresentacao__foto {
-    width: 50%;
+    width: 100%;
     height: 550px;
     border-radius: 16px;
 }
@@ -121,7 +121,7 @@ body {
     font-size: 1.5rem;
     font-weight: 400;
 }
-@media screen and (min-width: 992px) {
+@media screen and (max-width: 992px) {
     .apresentacao {
         max-width: 992px;
         height: auto;
@@ -133,11 +133,25 @@ body {
     .apresentacao__links__botoes{
         font-size: 90%;
     }
+    .cabecalho {
+        padding: 10%;
+    }
+    .cabecalho__menu {
+        justify-content: center;
+    }
+    .apresentacao {
+        flex-direction: column-reverse;
+        padding: 5%;
+    }
+
+    .apresentacao__conteudo {
+        width: auto;
+    }
  }
 
- @media screen and (min-width: 380px) {
+/*@media screen and (min-width: 380px) {
     .apresentacao {
-        grid-template-columns: 1fr 1fr ;
+        flex-direction: column-reverse;
     }
     .apresentacao__links__botoes{
         font-size: 90%;
@@ -146,7 +160,7 @@ body {
 
 @media screen and (min-width: 576px) {
     .apresentacao {
-        grid-template-columns: 1fr 1fr 1fr ;
+        flex-direction: column-reverse;
     }
     .apresentacao__links__botoes{
         font-size: 90%;
@@ -155,19 +169,12 @@ body {
 
 @media screen and (min-width: 992px) {
     .apresentacao {
-        grid-template-columns: 1fr 1fr 1fr;
+        flex-direction: column-reverse;
     }
     .apresentacao__links__botoes{
         font-size: 90%;
     }
- }
-
-
-
-
-
-
-
+ }*/
 
 
 /*@media (max-width: 1200px) {
