--- a/styles/style.css
+++ b/styles/style.css
@@ -121,7 +121,7 @@ body {
     font-size: 1.5rem;
     font-weight: 400;
 }
-@media screen and (max-width: 992px) {
+@media (max-width: 992px) {
     .apresentacao {
         max-width: 992px;
         height: auto;
